# rust_android_foreground_service

./: Cargo.toml  build.rs  manifest.yaml  prepare_android.sh
kotlin/: RustService.kt
src/: lib.rs
src/android/: mod.rs
src/ui/: appwindow.slint
